# LLMRec

./: .gitignore  candidate_indices  item_attribute.csv  main.comment.py  main.py  preprocess.py  pyproject.toml  train_mat
LLM_augmentation_construct_prompt/: gpt_i_attribute_generate_aug.bak.py  gpt_i_attribute_generate_aug.py  gpt_ui_aug.bak.py  gpt_ui_aug.py
utils/: llm.py
