[project]
name = "llmrec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.99.5",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
